@@ -2,3 +2,4 @@
 Perverzija - added contextmenu to lookup info from the video
 animeidhentai - fix listing
 heantaihavenco - fix listing
+spankbang - fix search pagination
